complete edits to scenarios

--- a/scenarios.html
+++ b/scenarios.html
@@ -190,37 +190,46 @@ St. Kitts and Nevis</a> - Marxan with Zones generated a series of scenario-analy
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
 <b>Q: How do I get started developing scenarios for MSP?</b><br>
-<i>A: Scenario development is dependent on location, partners, and objectives.  Refer to our list of scenarios development tools for ways to get started.  For example, our Belize use-case (described below) used a habitat risk assessment tool combined with stakeholder engagement to draft and refine three alternative future scenarios.</i><br>
+<i>A: Scenario development is dependent on location, partners, and objectives. Identification of goals, ecosystem-service objectives, and key human and global change drivers can occur through a stakeholder engagement process, using guidance from existing plans and reports, or a combination of approaches (McKenzie et al. 2013). Refer to our list of scenarios development tools for ways to get started on the technical work involved in translating scenarios into inputs for models in the next step--<a href="analyze.html"><b>Analyze</b></a>. For example, our Belize use-case (described below) used stakeholder engagement and a habitat risk assessment tool to draft and refine three alternative future scenarios.</i><br>
+KA:  THESE CITATIONS ARE MORE ABOUT STAKEHOLDERS BEING INVOLVED IN SCIENCE-POLICY PROCESSES, BUT COULD BE USEFUL TO CITE.
+ Cash DW et al. (2003) Knowledge systems for sustainable development. PNAS 100:8086–8091.
+Reid RS et al. (2009) Evolution of models to support community and policy action with science: Balancing pastoral livelihoods and wildlife conservation in savannas of East Africa. PNAS:pnas.0900313106.
+Dalton TM (2005) Beyond Biogeography: a Framework for Involving the Public in Planning of U.S. Marine Protected Areas. Conserv Biol 19:1392–1401.
+
 <p></p>
-<b>Q: Can Marxan with Zones be used with InVEST models?</b><br>
-<i>A: Marxan produces zoning configurations for the purpose of achieving multiple planning objectives.  InVEST can use zoning maps produce by Marxan (e.g., optimal locations for different sectoral uses) to assess outcomes for people based on the future changes to ecosystem structure and function.  NatCap has used various scenario tools as a means to create inputs for InVEST models.  For example, the <a href="http://www.warrenpinnacle.com/prof/SLAMM/" target="_blank"><b>SLAMM model</b></a> (Sea Level Affecting Marshes Model) was applied in the US Gulf of Mexico to produce maps showing where salt marshes migrate under different sea level rise scenarios for the year 2100.</i><br>
+<b>Q: Can Marxan with Zones or other tools be used in conjunction with InVEST models?</b><br>
+<i>A: Marxan produces zoning configurations that achieve multiple planning objectives. InVEST can use zoning maps produced by Marxan (e.g., optimal locations for different sectoral uses) to assess outcomes for people based on the future changes to ecosystem structure and function resulting from activities allowed in the zones. [ADD SENTENCE GIVING EX OF WHERE MARXAN WITH ZONES WAS USED AS AN INPUT TO INVEST—IN MAPP?] NatCap has used various scenario tools as a means to create inputs for InVEST models. For example, we applied the <a href="http://www.warrenpinnacle.com/prof/SLAMM/" target="_blank"><b>SLAMM model</b></a> (Sea Level Affecting Marshes Model) in the US Gulf of Mexico to produce maps showing where salt marshes migrate under different sea level rise scenarios for the year 2100. These maps were in turn used as inputs to InVEST’s coastal vulnerability and blue carbon models (see Analyze -- NOT SURE EXACTLY WHY WE LINK TO ANALYZE HERE. IS THERE A LINK OR CITATION FOR THE SLAMM-INVEST WORK?).</i><br>
+KA: I THINK IT SHOULD BE COASTAL PROTECTION – WASN’T IT DONE FOR THE GALVESTON AND FREEPORT WORK?
 <p><p>
 <b>Q: When are my scenarios final?</b><br>
-<i>A: After preliminary analyses, scenarios can be iteratively refined to better reflect plausible alternative futures.  Throughout the scenario development process, continue consulting stakeholders and local experts to ensure that your scenarios are plausible and will help your team produce information that can answer your specific research questions.</i><br>
+<i>A: After preliminary analyses and visualization of the consequences of scenarios for objectives, scenarios can be iteratively refined to better reflect plausible or desired alternative futures. Throughout the scenario development process, continue consulting stakeholders and local experts to ensure that your scenarios are plausible, desirable, and will help your team produce information that can answer your specific research questions (e.g., Arkema et al. 2014 in review).</i><br>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
 <ul>
 <li>Arkema, Katie K., et al. "Assessing habitat risk from human activities to inform coastal and marine spatial planning: a demonstration in Belize." <i>Environmental Research Letters</i> 9.11 (2014): 114016. <a href="docs/Arkema_etal_2014_EL.pdf" target="_blank">doi:10.1088/1748-9326/9/11/114016</a></li>
+<li>Arkema, Katie et al. PNAS paper 2015</li>
 <li><a href="tradeoff.html"><b>Tradeoff!</b></a> - A series of simple games developed by the Natural Capital Project that challenges participants to consider the consequences of development on environment and how these actions will impact the benefits ecosystems provide to people</li>
 <li><a href="http://naturalcapitalproject.org/pubs/ScenariosPrimer.pdf" target="_blank"><b>Scenario Primer</b></a> - A quick guide that introduces scenarios and how they can be used with InVEST. It also provides guidance on what makes an effective scenario, suggests goals and methods for developing scenarios, and illustrates how to convert scenarios into maps in InVEST.</li>
 <li><a href="http://www.naturalcapitalproject.org/pubs/ScenariosGuide.pdf" target="_blank"><b>Scenario Guidance and Case Studies</b></a> - A detailed resource for practitioners who want to assess ecosystem services under alternative scenarios. Drawing on case experiences, it provides guidance on scenario types and methods, engaging stakeholders, and creating scenario maps.</li>
+<li><a href="http://wwf.panda.org/about_our_earth/all_publications/?194764/Future-trends-in-the-Baltic-Sea" target="_blank"><b>WWF's Future Trends in the Baltic Sea report</b></li>
 </ul>
 <p></p>
 <a name="use-cases"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/use-cases_sm.png" align="left"><h2>&nbsp;&nbsp;Use-Cases</h2>
 Use the expand [+] button to learn more about this scenario design step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
+SEE GITHUB ISSUE #6
 <h4>New England</h4>
 During meetings with stakeholders and agencies working in the New England area, it became clear that the word "scenario" was not the preferred terminology to describe future ocean uses.  NatCap continues work in the region to help provide decision makers with scientifically valid information to use for broader marine planning efforts.  See our <a href="http://www.naturalcapitalproject.org/where/newengland.html" target="_blank"><b>New England</b></a> use-case for more details.
 <p></p>
 <h4>Belize</h4>
-<p>Scenarios reflecting three plausible futures for Belize in the year 2025 were developed through a succession of stakeholder meetings and workshops.  These alternative scenarios are based on maps of the current distribution of ocean and coastal activities, existing and pending goverment plans, and stakeholders' values and preferences.  The following set of rotating images describes this stakeholder-driven process where our partner, CZMAI, mapped three zoning configurations describing the location and extent of future human uses.</p><br><br>
+<p>Scenarios reflecting three plausible futures for Belize’s coastal development in the year 2025 were developed through a succession of government-led stakeholder meetings and workshops with communities along the entire coastline. These alternative scenarios are based on maps of the current distribution of ocean and coastal activities, existing and pending government plans, and stakeholders' values and preferences. The following set of rotating images describes this stakeholder-driven process where our government partner, the Coastal Zone Management and Institute (CZMAI), mapped three zoning configurations describing the location and extent of future human uses.</p><br><br>
 <ul id="folio_scroller">
 <li><span>Maps of current human activities in the coastal zone were compiled by our partner, CZMAI</span><img alt="" src="img/scenarios_bz_folio_1.png" /></a></li>
 <li><span>Two rounds of stakeholder consultations were held throughout the 9 coastal planning regions</span><img alt="" src="img/scenarios_bz_folio_2.png" /></a></li>
 <li><span>Preliminary scenario storylines and InVEST outputs were presented at two workshops held in Belize City. Representatives from government, academia, environmental NGOs and civil society reviewed these early results and suggested improvements.</span><img alt="" src="img/scenarios_bz_folio_3.png" /></a></li>
-<li><span>Final scenario descriptions and maps were used to assess future outcomes with InVEST</span><img alt="" src="img/scenarios_bz_folio_4.png" /></a></li>
+<li><span>Final scenario descriptions and maps were used to assess future outcomes with InVEST (in the <a href="analyze.html"><b>Analyze</b> step)</a></span><img alt="" src="img/scenarios_bz_folio_4.png" /></a></li>
 </ul> 
 <p></p><br><br>
 </body>
