edits to scope not including links or use cases

--- a/scope.html
+++ b/scope.html
@@ -139,7 +139,7 @@ window.onload = function (evt) {
 <body>
 <h1>Step 1: Scope</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-Scoping is essential for framing appropriate scientific questions, improving the quality of analytical outputs, and increasing the likelihood that results are salient and accessible to stakeholders and policymakers. It can also create the conditions that enable success by clarifying the policy question and ecosystem services of interest, identifying local leaders and champions, and determining whether a policy window has opened up or could open as the result of the research.
+It is difficult to overestimate the importance of the scoping step.  This is the stage in which you define the boundaries of the process to be undertaken including: What specific questions are we asking? Do we have the right participants involved (e.g., local champions, key stakeholders, staff with the necessary skills)? Are we addressing the issues that most matter to people here?  What is our geographic area? What is the timeline for the planning process and the time horizon for the eventual management plan?  Ultimately, getting this step right is critical to developing a shared vision and generating results that matter to decision-makers.
 <p></p>
 <img src="img/approach_Step1.png" usemap="#step1"><br>
 <map name="step1">
@@ -149,43 +149,52 @@ Scoping is essential for framing appropriate scientific questions, improving the
   <area shape="circle" coords="634,86,55" href="synthesize.html" alt="Synthesize">
   <area shape="circle" coords="765,85,55" href="communicate.html" alt="Communicate">
 </map>
+Appropriate scoping serves to link the decisions, decision-makers, and scientific support staff to improve the quality of scientific outputs and ensure that results are salient, accessible and designed to meet real policy needs. In our experience, scoping is most successful in driving action when it includes several essential tasks: 
+<ul>
+<li>Defining partnerships, roles and objectives</li>
+<li>Setting a work plan </li>
+<li>Identifying key decision questions</li> 
+<li>Selecting methods and tools for analysis</li>
+<li>Exploring available data </li>
+<li>Establishing a process to engage stakeholders, incorporate local knowledge, share and iterate upon results </li>
+<li>Developing a rapport and genuine respect between partners </li>
+<li>Matching work plans with external timelines (e.g., windows to affect policy) and available resources </li>
+<li>Identifying essential expertise (e.g., planner, project manager, GIS tech) and for which phases these skills are required</li> 
+<li>Thinking ahead to a communication plan for sharing and receiving feedback on results and management recommendations</li>
+</ul>
+DF: IN OTHER PAGES, THE EDITS MERGE "GOALS" INTO "OVERVIEW". THAT WASN'T DONE ON THIS PAGE, BUT COULD BE DONE EASILY.
 <a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2><p></p>
 <ul>
-<li>Clear understanding of the scientific or policy questions to be answered</li>
-<li>Project team with clear roles and responsibilities</li>
-<li>Assessment and synthesis of relevant literature (e.g., literature review)</li> 
+<li>Shared vision of practical outcomes including clear understanding of the questions to be answered and the results delivered</li>
+<li>Project team with well-articulated roles and responsibilities </li>
 <li>Work plan, including expected methodology and timeline</li>
-<li>Preliminary assessment of available and needed data (e.g., gap analysis)</li>
+<li>Preliminary assessment of available and needed resources (e.g., data and information, local knowledge, team capacity, lines of communication to authorities and local experts, funding)</li>
 </ul>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
-This step serves to link the decisions, decision-makers, and scientific support staff to improve the quality of scientific outputs and ensure that results are salient, accessible and designed to meet policy needs.  We find that scoping is most successful in driving action when it includes several essential tasks:
-<li>Defining partnerships, roles and objectives</li>
-<li>Setting a work plan</li>
-<li>Identifying key decision questions</li>
-<li>Selecting methods and tools for analysis</li>
-<li>Establishing a process to engage stakeholders and exchange knowledge</li>
-<li>Developing a rapport and genuine respect between partners</li>
-<li>Ensuring plans are feasible given timelines and available resources</li>
-<li>Identifying essential expertise (e.g., planner, project manager, GIS tech) and for which phases these skills are required</li>
+<li>Remember that decision-making is exceedingly complex and have appropriate expectations. If your science is good and your science-policy process was well scoped and executed, your work is more likely to have an impact.  Have patience, it may take longer than you think.</li>
 <p></p>
 <a name="questions"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/scopeQ_sm.png" align="left"><h2>&nbsp;&nbsp;Sample MSP Scoping Questions</h2><p></p>
 <ul>
-<li>Is there a specific problem(s) people are rallying around?</i>
-<li>Which coastal and ocean sectors are <b>most relevant</b> to the planning process?</li>
-<li>How can an ecosystem service approach <b>aid</b> marine spatial planning?</li>
-<li>What are the <b>essential considerations</b> and <b>trade-offs</b> to be considered for the decision at hand?</li>
-<li>Who is at the table?  Which sectors, stakeholders and decision-makers should be engaged?</li>
+<li>What are the marine and coastal issues people in this region care the most about? (e.g., preserving and enhancing existing uses, finding space for new and emerging uses)</li>
+<li>Where should we site particular kinds of activities? (e.g., conservation, restoration, extraction, development)</li>
+<li>What are the ecosystem components people care most about? (e.g., endangered species, special places, opportunities for important activities)</li>
+<li>What time horizon are you planning for?</li>
+<li>Who has the authority to do something with the information generated? Are they involved in the process or do they have good connections to it?</li>
+<li>Have we articulated clear, answerable questions? (e.g., those that can be addressed in the “analyze” step) (cite Arkema et al. BZ PNAS paper).</li>
+<li>What is the timeline for the planning process and can we achieve our goals within the time allotted?</li>
+<li>How many iterations through the Steps in this concierge do we intend to do?  Who will we consult for feedback along the way?</li>
+<li>Will the models and tools we have at our disposal answer the management and science questions we are asking?</li>
 </ul>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
 <b>Q: Why is scoping important?  Is it okay to start scoping later in the process?</b><br>
-<i>A: Early scoping saves time down the road.  By clearly outlining project objectives, scoping focuses efforts on key questions and ensures that the planning process will yield the high impact results.  Working with stakeholders and decision-makers from the beginning can save time (both yours and theirs).  During this scoping step, we have found that issues we thought mattered, don't always matter to local people. For example, only sometimes do they want to see valuation.  Also, sometimes the ecosystem and economic measures we used in one location were not relevant to a decision-making in another.</i><br>
+<i>A: Early scoping saves time down the road. By clearly outlining project objectives, scoping focuses efforts on key questions and ensures that the science-policy process will yield actionable results. Working with stakeholders and decision-makers from the beginning can save time (both yours and theirs). During this scoping step, we have found that issues we thought mattered, don't necessarily matter to local people. For example, monetary valuation of ecosystem services is helpful in some cases, but a distraction in others.</i><br>
 <p></p>
 <b>Q: How much scoping is <u>enough</u>?</b><br>
-<i>A: Scoping should match the scale of the project.  Scoping can start with a brief description of work (e.g., report), but may end up being a 2-3 month process (see our Barbados example).  Remember that scoping happens in stages and is typically part of an iterative process.  Data limitations, combined with the need for further scenario development and synthesis of initial results, may require additional literature review, new partners, or the need for refined questions.</i><br>
+<i>A: Scoping should match the scale of the project. Scoping can start with a brief description of work (e.g., report), but may end up being a longer, iterative process (see our Barbados example). Remember that scoping happens in stages and is typically part of an iterative process. Data limitations, combined with the need for further scenario development and synthesis of initial results, may require additional literature review, new partners, or the need for refined questions.</i><br>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
