misc text edits

--- a/data.html
+++ b/data.html
@@ -141,7 +141,7 @@ window.onload = function (evt) {
 <body>
 <h1>Step 2: Data (Compile Information)</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-MSP typically relies on both spatial and non-spatial information characterizing the coastal and marine space. An organized collection of information is useful for all types of participants involved in MSP.  Data allow you to visualize the locations of current environments and human activities and serve as a foundation for discussions of future plans.  Often, data also serve as inputs to predictive models and MSP decision-support tools (POSSIBLE TO LINK TO DST DEFINITION ON ANALYZE PAGE?).  Other times data are used to visually depict or quantify elements of scenarios (Scenario Step).  The uses for the data should be clearly identified before data are collected – often based on the goals established during the Scoping and Analyze Steps.
+MSP typically relies on both spatial and non-spatial information characterizing the coastal and marine space. An organized collection of information is useful for all types of participants involved in MSP.  Data allow you to visualize the locations of current environments and human activities and serve as a foundation for discussions of future plans.  Often, data also serve as inputs to predictive models and MSP decision-support tools (POSSIBLE TO LINK TO DST DEFINITION ON ANALYZE PAGE?).  Other times data are used to visually depict or quantify elements of scenarios (<a href="scenario.html"><b>Scenario</b></a>Step).  The uses for the data should be clearly identified before data are collected – often based on the goals established during the <a href="scope.html"><b>Scoping</b></a> and <a href="analyze.html"><b>Analyze</b></a> Steps.
 Generally, useful data include biophysical and oceanographic information such as elevation and bathymetry, maps of human activities such as transportation routes or fishing grounds, the distribution of coastal and marine habitats, and socioeconomic data like those provided by official censuses.  When monetary valuation is a part of the assessment, additional data on market prices or property values may also be pertinent.
 
 <p></p>
@@ -176,13 +176,14 @@ There are many useful data sources available online, including:
 <li><a href="http://glovis.usgs.gov/" target="_blank"><b>USGS Global Visualization Viewer</b></a>A global, searchable database of historical <b>Landsat imagery</b></li>
 <li><a href="http://modis.gsfc.nasa.gov/data/dataprod/" target="_blank"><b>MODIS</b></a>Products from a variety of disciplines, including <b>oceanography, biology, and atmospheric science</b></li>
 <li><a href="http://www.openstreetmap.org/" target="_blank"><b>OpenStreetMap</b></a>Export points, lines, polygons, representing a wide range of cultural <a href="http://wiki.openstreetmap.org/wiki/Map_Features">features</a></li>
-<li>MORE EXAMPLES OF SOCIO-ECON DATA?<li>
-
+<li><li>
+<li>MORE EXAMPLES OF SOCIO-ECON DATA?</li>
 <p></p>
 <div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/databases_sm.png" align="left"><h2>&nbsp;&nbsp;Regional Databases</h2>
 Hover over each marker to learn more about these regional MSP databases.  Click on the marker to visit each website.<br>
 <i>Do you know of other regional/local MSP databases?  <a href="mailto:gverutes@stanford.edu?Subject=Regional%20MSP%20Database" target="_top">E-mail us</a> the details!</i>
+<br>
 <ul>
 <li>COASTAL HAZARDS DATABASE FOR CENTRAL AND SOUTHERN AMERICA SUPPORTED BY CEPAL AND GOVERNMENT OF SPAIN http://www.c3a.ihcantabria.com/</li>
 <li>US CENSUS BUREAU?</li>
