--- a/scope.html
+++ b/scope.html
@@ -183,7 +183,7 @@ DF: IN OTHER PAGES, THE EDITS MERGE "GOALS" INTO "OVERVIEW". THAT WASN'T DONE ON
 <li>What are the ecosystem components people care most about? (e.g., endangered species, special places, opportunities for important activities)</li>
 <li>What time horizon are you planning for?</li>
 <li>Who has the authority to do something with the information generated? Are they involved in the process or do they have good connections to it?</li>
-<li>Have we articulated clear, answerable questions? (e.g., those that can be addressed in the “analyze” step) (cite Arkema et al. BZ PNAS paper).</li>
+<li>Have we articulated clear, answerable questions? (e.g., those that can be addressed in the <a href="analyze.html"><b>Analyze</b></a> step) (CITE ARKEMA ET AL. BZ PNAS PAPER).</li>
 <li>What is the timeline for the planning process and can we achieve our goals within the time allotted?</li>
 <li>How many iterations through the Steps in this concierge do we intend to do?  Who will we consult for feedback along the way?</li>
 <li>Will the models and tools we have at our disposal answer the management and science questions we are asking?</li>
