--- a/welcome.html
+++ b/welcome.html
@@ -21,37 +21,44 @@
 </head>
 <body>
 <h1>Marine Spatial Planning Concierge</h1>
+<p>As 50 million people are born each year and similar numbers seek to raise their standard of living, Earth's marine ecosystems face expanding pressure from fisheries, aquaculture, energy production, runoff from land, shipping, recreation, climate change, and more (MA 2005, Halpern et al. 2008, SOMETHING MORE RECENT…). With careful planning, we can continue to derive benefits from oceans and coasts while protecting the natural capital that sustains life. Without careful planning, human activities likely will further degrade the oceans and squander the potential benefits provided by healthy marine ecosystems. To maintain and enhance the myriad benefits available from marine ecosystems, it has become clear that our oceans and coasts need better marine planning.  The concept of marine planning (also called marine spatial planning, maritime planning, coastal development planning, among other terms) calls for marine systems to be managed for multiple uses, in ways that account for diverse marine ecosystem services, and that guide the patterns and types of use to sustain ocean productivity for the needs of present and future generations (Convention on Biological Diversity 2004; Obama 2009; CEQ 2010; European Commission 2010; UN General Assembly 2010)</p>
+<p>Transforming the very appealing ideas of marine spatial planning into practical advice, guidance, and action on-the-ground and in-the-water, can be a complex and challenging process. Several proposed frameworks guide current planning (Kittinger et al. 2014, Cornu et al. 2014, Beck et al. 2009, Ehler & Douvere 2009, Day 2008), many of which suggest incorporating ecosystem services and risk to habitats as elements of planning (Arkema et al. 2014, Koehn et al. 2013). Technical tools within such frameworks can help add scientific rigor and transparency to spatial planning processes, but there is confusion over what they do and how they can be linked.</p>
+
 <p>
 Marine spatial planning can be a <b>complex and challenging process</b>. There are several proposed frameworks (<a href="http://dx.doi.org/10.1890/130267" target="_blank">Kittinger et al. 2014</a>, <a href="http://onlinelibrary.wiley.com/doi/10.1111/cobi.12310/full" target="_blank">Cornu et al. 2014</a>, <a href="http://www.marineplanning.org/pdf/msp_best_practices.pdf" target="_blank">Beck et al. 2009, <a href="http://unesdoc.unesco.org/images/0018/001865/186559e.pdf" target="_blank">Ehler & Douvere 2009</a>), many of which suggest <b>incorporating ecosystem services and risk to habitats</b> as elements of planning (<a href="docs/Arkema_etal_2014_EL.pdf" target="_blank">Arkema et al. 2014</a>, <a href="http://www.sciencedirect.com/science/article/pii/S0308597X13000249" target="_blank">Koehn et al. 2013</a>).  Technical tools can be useful, but there is confusion over what they do and how they can be linked.
 </p>
+
 <p></p>
-This website was designed to help answer <b>frequently asked questions</b> about MSP, including:
-<li>Which organizations have done MSP and where?</li>
-<li>How does one find and compile spatial data? (<b><a href="data.html">Data</a></b>, step 2)</li>
-<li>When are <b><a href="scenarios.html">Scenarios</a></b> (step 3) useful in this process?</li>
-<li>There are many available decision-support tools (<b><a href="analyze.html">Analyze</a></b>, step 4). How do I make sense of them all?</li>
-<li>Many tools require specialized expertise to apply such as data pre-/post-processing.  Where can I get help?</li>
+<p>We designed this "MSP Concierge" to make it easier to learn about, get inspired by, and implement marine spatial planning.  In particular, we focus on how to incorporate ecosystem service understanding into planning. With this tool, we hope to meet you where you are-from nursing a fledgling interest in the topic to embarking on a full-blown planning process in your community, to everything in between. Just like the concierge in the lobby of a hotel, we've organized lots of information with the aim of helping you get what you need. The MSP Concierge organizes existing technical approaches, information, and tools in a generalized spatial planning framework.  The steps we outline will help answer frequently asked questions about MSP, including:</p>
+<li>Where has MSP already been implemented and by whom? CAN WE LINK A STEP HERE? MR: "LINK TO THE MOORE FDN'S SYNTHESIS OF MSP PROJECTS AROUND THE WORLD www.oceanplanning.org AND CITE EHLER AND DOUVERE 2009"</li>
+<li>How does one find and compile relevant spatial data? (<b><a href="data.html">Data</a></b>, step 2)</li>
+<li>When and how are <b><a href="scenarios.html">Scenarios</a></b> (step 3) useful in this process?</li>
+<li>There are many available decision-support tools I might use to <b><a href="analyze.html">Analyze</a></b> (step 4) my data and information. How do I make sense of them all?</li>
+<li>Many tools require specialized expertise to apply such as data pre-/post-processing.  Where can I get help? (<b><a href="analyze.html">Analyze</a></b> & <b><a href="synthesize.html">Synthesize</a></b>, steps 4-5)</li>
 <li>How can I effectively summarize technical information (<b><a href="synthesize.html">Synthesize</a></b> & <b><a href="communicate.html">Communicate</a></b>, steps 5-6)</li>
 <li>Where should I go for assistance when something goes wrong?</li>
 <p></p>
 <div class="hr dotted clearfix">&nbsp;</div>
-<h2>What are MSP and ecosystem services?</h2>
-<b>Marine spatial planning</b> (MSP) is a tool for <b>minimizing conflicts among users and reducing impacts on ecosystems</b>.  Increasing demands on ocean space for diverse uses, including tourism, recreation, fishing, shipping, national security, oil and gas exploration and renewable energy (wind and wave), have led to more conflicts among users as well as additional impacts on already stressed ocean ecosystems (Lubchenco and Petes 2010, Douvere 2008, United Nations Environment Programme 2006).
+<h2>OK, so what, exactly is MSP? And how do ecosystem services fit in (whatever they are...)?</h2>
+<b>Marine spatial planning</b> (MSP) is an approach to <b>achieve multiple objectives for ocean use by minimizing conflicts among users and reducing impacts on ecosystems</b>.  
+<b>Ecosystem services</b> are the stream of benefits people get from earth's lands, waters, and biodiversity.
+Without marine spatial planning, the delivery of diverse ecosystem services, now and in the future, is in jeopardy.  Increasing demands on ocean space for diverse uses, including tourism, recreation, fishing, shipping, national security, oil and gas exploration and renewable energy (wind and wave), have led to more conflicts among users as well as additional impacts on already stressed ocean ecosystems (Lubchenco and Petes 2010, Douvere 2008, United Nations Environment Programme 2006). These increasing demands and stressed ecosystems are putting ecosystem services and human wellbeing in peril. MSP, when developed with the sectors and communities who are affected by these pressures and demands, can identify synergies and tradeoffs in human uses for ultimate management decisions.
 <p></p>
-For more information about the relationships between <b>impacts &#8596; habitats &#8596; benefits</b>, click on the "Human Uses" tab below to rotate the set of images.
+Also, ecosystem services provide useful metrics for marine planning. They are, afterall, what connects people to life- and livelihood-giving oceans and coasts.  A scientific approach underpinning MSP contains explicit hypotheses about the mechanistic linkages between (i) human activities and earth processes such as climate, (ii) ecosystem processes, condition, and distributions, and (iii) the benefits flowing to people from ecosystems. For more information about the relationships between impacts ↔ ecosystems ↔ benefits, click on the "Human Uses" tab below to rotate the set of images.
+<p></p>
+In this guide we highlight an ecosystem service (ES) approach (<a href="docs/Ruckelshaus_etal_2014_EE.pdf" target="_blank">Ruckelshaus et al. 2013</a>) that can improve outcomes from an MSP process. This means that during the planning process the focus is not just on the condition of the ecosystem itself, but also on the flow of benefits from ecosystems to people (or "ecosystem services"). Since this connection between environmental condition and human benefit is not typically considered in multi-objective ocean development and management, we offer a roadmap and resources for an ecosystem service approach to inform such spatial planning decisions.
 <p></p><br><br>
 <ul id="folio_scroller">
-<li><span>This diagram depicts potential conflicts among human use activities in a tropical system like Belize.  Information contained within this website can also be applied to MSP in temperate and arctic systems. <i>Images courtesy of the </b><a href="http://www.healthyreefs.org" target="_blank">Healthy Reefs Initiative</a></i></span><img alt="" src="img/folio_4.png" /></a></li>
-<li><span>Human use activities provide important economic and social benefits to people.</span><img alt="" src="img/folio_1.png" /></a></li>
-<li><span>MSP aims to maximize economic opportunities while minimizing environmental degradation.  Spatial planning that considers a range of stakeholder values has the potential to reduce ocean conflicts and maintain a suite of benefits provided by ecosystems.</span><img alt="" src="img/folio_3.png" /></a></li>
-<li><span>Healthy coastal-marine ecosystems such as mangroves, corals and seagrasses provide important benefits (or "ecosystem services") to people.  Poor ocean planning, however, can pose serious risk to these habitats, resulting in less services.</span><img alt="" src="img/folio_2.png" /></a></li>
+<li><span>This diagram depicts potential conflicts among human activities in a tropical system like Belize. We have designed this MSP Concierge tool to help with planning in tropical, temperate, and arctic systems. <i>Images courtesy of the </b><a href="http://www.healthyreefs.org" target="_blank">Healthy Reefs Initiative</a></i></span><img alt="" src="img/folio_4.png" /></a></li>
+<li><span>Human activities provide important economic and social benefits to people.</span><img alt="" src="img/folio_1.png" /></a></li>
+<li><span>•	MSP aims to optimize the balance between enhanced economic opportunities and healthy environmental condition. Spatial planning that considers a range of stakeholder values has the best potential to reduce ocean conflicts and maintain a suite of benefits provided by ecosystems.</span><img alt="" src="img/folio_3.png" /></a></li>
+<li><span>Healthy coastal-marine ecosystems such as mangroves, corals and seagrasses provide important benefits (or "ecosystem services") to people.  Poor ocean planning, however, can pose serious risk to these habitats, resulting in fewer services.</span><img alt="" src="img/folio_2.png" /></a></li>
 </ul> 
 <p></p><br><br>
-In this guide we highlight an <b>ecosystem service</b> (ES) <b>approach</b> (<a href="docs/Ruckelshaus_etal_2014_EE.pdf" target="_blank">Ruckelshaus et al. 2013</a>) which we believe can <i><b>aid the MSP process</b></i>.  This means that during the planning process the focus is not just on the ecosystem itself, but the flow of benefits from healthy ecosystems to people (called "ecosystem services").  Since this connection between environmental health and human benefit is not typically considered in ocean development and management, we suggest an approach to include ecosystem service information in these decisions.
 <p></p>
 <div class="hr dotted clearfix">&nbsp;</div>
 <h2>Suggested MSP Approach</h2>
-There are several suggested MSP approaches which converge around these common themes.  This website adapts an approach for conducting decision-relevant assessments of ecosystem services designed by Rosenthal and colleagues at the Natural Capital Project to be used in the context of marine spatial planning (<a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">Rosenthal et al. 2014</a>).<p></p>
+Several MSP approaches exist that converge around these common themes (LINKS TO PAPERS, WEBSITES). The MSP Concierge draws on several such approaches, and adapts a general process for conducting decision-relevant assessments of ecosystem services to one tailored for the context of marine spatial planning (<a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">Rosenthal et al. 2014</a>).<p></p>
 <center>
 <img src="img/approach_noInset.png" usemap="#noInset"><br>
 <map name="noInset">
@@ -63,7 +70,7 @@ There are several suggested MSP approaches which converge around these common th
   <area shape="circle" coords="736,86,55" href="communicate.html" alt="Communicate">
 </map>
 </center>
-We encourage you to explore the six steps of this approach by clicking the menu links in the left panel. <b><u>For each step</u></b> we provide the following information:
+We encourage you to explore the six steps of this approach by clicking the menu links in the left panel. <b><u>For each step</u></b> we provide some combination of the following elements:
 <p></p>
 <center>
 <table>
@@ -80,7 +87,9 @@ We encourage you to explore the six steps of this approach by clicking the menu 
 <p></p>
 <div class="hr dotted clearfix">&nbsp;</div>
 <h2>NatCap MSP Use-Cases</h2>
-Learning about different MSP use-cases can highlight methods and tools that can be adapted to your own projects. The <a href="contact.html">Natural Capital Project</a> (NatCap) has compiled lessons from six MSP use-cases around the world.  At the bottom of each subpage we summarize how each step was accomplished for select use-cases.
+Learning about different MSP use-cases can highlight methods and tools that can be adapted to your own projects. The <a href="contact.html">Natural Capital Project</a> (NatCap) has compiled lessons from six MSP use-cases in which we have been involved around the world. At the bottom of each Step's page, we summarize how that step was accomplished for select use-cases. We also offer links to additional resources for exploring examples from around the world (CITE LINK TO MOORE FDN REPORT, OTHER REFS).
+
+MR: EITHER PUT THE MAP UNDER 'CONTACTS' HERE OR LINK TO IT—IT COULD OTHERWISE GO UNNOTICED BY MANY VISITORS
 <p></p>
 <a class="float right" href="#">top</a>
 <p></p><br>
