--- a/frame.html
+++ b/frame.html
@@ -3,6 +3,15 @@
   <title></title>
 <link href="css/menu-vertical.css" rel="stylesheet" type="text/css" />
 <script src="js/menu-vertical.js" type="text/javascript"></script>
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-787904-11', 'auto');
+  ga('send', 'pageview');
+</script>
 </head>
 <body>
 <img src="img/logo_Concierge.png">
