--- a/links.html
+++ b/links.html
@@ -135,6 +135,15 @@ window.onload = function (evt) {
   createDocumentStructure('h4');
 }
 </script>
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-787904-11', 'auto');
+  ga('send', 'pageview');
+</script>
 </head>
 <body>
 <img src="img/headers/links_sm.png" align="left"><h1>&nbsp;&nbsp;Links</h1>
